# challenge-konsi

./: .env.development  .env.homolog  .env.production  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
api/: main.py  routes.py
api/consumer/: consumer.py
api/controllers/: benefit_controller.py
api/producer/: producer.py
api/repository/: benefit_repository.py
api/repository/elasticsearch/: repository_base.py
api/schemas/: cpf_benefit_data.py  cpf_data.py  query_params_data.py
api/services/: benefit_service.py
api/utils/: consumer_singleton.py  elastic_search_factory.py  producer_singleton.py  rabbitmq_manager_factory.py  rabbitmq_manager_singleton.py  redis_cache_factory.py
app/: routes.py
app/controllers/: benefit_controller.py
app/producer/: producer.py
app/schemas/: cpf_benefit_data.py
app/services/: benefit_service.py
app/utils/: rabbitmq_manager_factory.py
config/: elastic_search_config.py  environment.py  logging.py  rabbitmq_manager.py  redis_config.py  web_driver_config.py  web_driver_manager.py
web_crawler_app/: main.py
web_crawler_app/app/: web_scrapper.py
web_crawler_app/crawl_pages/: benefits_by_cpf_search_page.py  login_page.py
