[tool.poetry]
name = "challenge-konsi"
version = "0.1.0"
description = ""
authors = ["Neto6391"]
license = "MIT"
readme = "README.md"
packages = [{include = "challenge_konsi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiohttp = "^3.8.5"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
argparse = "^1.4.0"
aio-pika = "^9.2.0"
logging = "^0.4.9.6"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
injector = "^0.21.0"
redis = "^4.6.0"
elasticsearch = {extras = ["async"], version = "^8.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
